# Mangi

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  pyproject.toml  speiseplan.html
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: docker-publish.yml
kubernetes/: deployment.yml
mangi/: .env  Cargo.toml  bot.py  diesel.toml
mangi/migrations/2022-03-06-104701_create_meals/: down.sql  up.sql
mangi/src/: main.rs
mangi/src/api/telegram/: errors.rs  helpers.rs  mod.rs
mangi/src/api/telegram/commands/: food.rs  list_user_settings.rs  mod.rs  user_settings.rs  welcome.rs
mangi/src/api/telegram/messages/: Diet.md  UserType.md  Welcome.md  mod.rs
mangi/src/config/: db.rs  mod.rs
mangi/src/helpers/: mod.rs
mangi/src/internal/: mod.rs
mangi/src/internal/mensa/: mod.rs  sync.rs
mangi/src/internal/mensa/models/: canteen.rs  diet.rs  meal.rs  mensa.rs  mod.rs
mangi/src/internal/mensa/service/: diet.rs  mock.rs  mod.rs  service.rs
mangi/src/internal/mensa/service/notes/: mod.rs
mangi/src/internal/mensa/storage/: errors.rs  mod.rs
mangi/src/internal/mensa/storage/postgres/: mod.rs  schema.rs  storage.rs
mangi/src/internal/mensa/storage/postgres/data/: canteens.rs  meal.rs
mangi/src/internal/users/models/: mod.rs  user.rs  user_type.rs
mangi/src/internal/users/service/: mod.rs
mangi/src/internal/users/storage/: enums.rs  mod.rs
mangi/src/internal/users/storage/postgres/: favorite.rs  mod.rs  user.rs
mangi/src/storage/: errors.rs  mod.rs  schema.rs
migrations/2022-03-06-104701_create_meals/: up.sql
open_mensa/: Cargo.toml
open_mensa/src/: lib.rs  mensas.rs
open_mensa/src/models/: canteen.rs  meal.rs  mod.rs
src/: main.rs
src/api/telegram/: mod.rs
src/api/telegram/commands/: mod.rs  (+2 more)
src/internal/: mod.rs
src/internal/meals/: mod.rs
src/internal/mensa/: mod.rs
telegram_bot/: Cargo.toml
telegram_bot/src/: bot.rs  errors.rs  lib.rs
(+24 files in other folders)
