[package]
name = "mangi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.10.2"
# telexide = { git = "https://github.com/rmrfus/telexide", branch = "master" }
env_logger = "0.9.0"
frankenstein = "0.10.1"
select = "0.5.0"
ureq = "2.4.0"
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_path_to_error = "0.1.7"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
log = "0.4.14"
open_mensa = { path = "../open_mensa" }